--- a/cell03/ex04/ex03bis/index.css
+++ b/cell03/ex04/ex03bis/index.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'chorm 1', sans-serif;
+    font-family: 'Georgia', sans-serif;
     background-color: #6653692c; 
     display: flex;
     justify-content: center;
