modified:   cell04/1/K.css 	modified:   cell04/1/Resume K.html

--- a/cell04/1/K.css
+++ b/cell04/1/K.css
@@ -17,6 +17,9 @@ header {
     text-align: center;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.24);
     width: 100%;
+    background-position: center;
+    background-size: cover;
+    background-repeat: calc(no-repeat);
 }
 
 /*ขนาดรูปโปร*/
@@ -51,7 +54,7 @@ nav ul li {
     margin: 0;
 }
 
-/*เปลี่ยนสี ui ตรงนี้*/
+
 nav ul li a {
     color: #fafafa;
     text-decoration: none;
@@ -112,6 +115,7 @@ table th {
     background-color: #5f2f6d;
     color: #fff;
     font-weight: bold;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.233);
 }
 
 table tr:hover {
