--- a/cell03/ex04/ex02bis/calc.css
+++ b/cell03/ex04/ex02bis/calc.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Georgia', sans-serif;
     background-color: #512c58; 
     display: flex;
     justify-content: center;
