deleted:    cell03/ex04/ex02bis/calc.css 	modified:   cell03/ex04/ex02bis/calc.html 	modified:   cell03/ex04/ex03bis/index.html 	modified:   cell04/1/G.css

--- a/cell04/1/G.css
+++ b/cell04/1/G.css
@@ -17,3 +17,61 @@ nav ul li a {
 nav ul li a:hover {
     background-color: #31313162;
 }
+
+body {
+    font-family: 'Georgia', sans-serif;
+    background-color: #512c58; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    padding: 20px;
+}
+
+
+.container {
+    text-align: center;
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 80%; 
+    margin-top: 20px;
+}
+
+h1 {
+    color: #559bc4;
+    margin-bottom: 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+input[type="text"], select {
+    padding: 12px;
+    margin: 8px;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    width: calc(100% - 20px); 
+    max-width: 300px; 
+    box-sizing: border-box; 
+    font-size: 16px;
+}
+
+input[type="submit"] {
+    padding: 12px 24px;
+    background-color: #2649bb; 
+    color: white;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 18px;
+    margin-top: 10px;
+    width: calc(100% - 20px);
+    max-width: 300px;
+}
